# sqlx_essence

./: .gitignore  Cargo.toml  README.md
essence_macros/: Cargo.toml
essence_macros/src/: helpers.rs  lib.rs  models.rs
macros/: Cargo.toml
macros/src/: helpers.rs  models.rs
src/: lib.rs  mysql_crud_tests.rs
tests/: Cargo.toml  schema.sql
tests/src/: main.rs
tests/src/models/: mod.rs
