[package]
name = "sqlx_essence"
version = "0.1.0"
edition = "2021"
authors = ["Doyin <didoloan@gmail.com>"]
description = "A compile time ORM for rust built around SQLx."
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "macros",
    "tests"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path="./macros", version="0.1.0" }
serde = { version="1.0.189", features=["derive"] }
futures = "0.3.28"