[package]
name = "sqlx_essence"
version = "0.2.0"
edition = "2021"
authors = ["Doyin <didoloan@gmail.com>"]
description = "A compile time ORM for rust built around SQLx."
license = "MIT OR Apache-2.0"
repository = "https://github.com/didoloan/sqlx_essence"

[workspace]
members = [
    "essence_macros"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essence_macros = { path="./essence_macros", version="0.2.0" } 
serde = { version="1.0.189", features=["derive"] }
futures = "0.3.28"
tokio = { version="1.33.0", features=["test-util", "macros"] } 
sqlx = { version="0.7.2", features=["mysql", "postgres", "chrono", "runtime-tokio-rustls"]  }
chrono = { version="0.4.24", features=["serde"] }