[package]
name = "tests"
version = "0.1.0"
edition = "2021"
authors = ["Doyin <didoloan@gmail.com>"]
description = "Testing."
license = "MIT OR Apache-2.0"
repository = "git@github.com:didoloan/sqlx_essence"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx_essence = { path="../" }
sqlx = { version = "0.6.3", features=["mysql", "runtime-tokio-rustls", "chrono"] }
chrono = { version="0.4.24", features=["serde"] }
sqlx-core = { version="0.6.2", features=["serde"] }
tokio = { version="1.26.0", features=["full"] }
serde = {version="1.0.189", features=["derive"]}
serde_json = "1.0.95"
utoipa = "4.0.0"